--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,12 @@
   background: #30E8BF;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #FF8235, #30E8BF);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #FF8235, #30E8BF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  text-align: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .avatar-img{
@@ -33,4 +39,23 @@
   border-top: 5px dotted white;
   width: 50%;
   margin: auto;
+}
+
+.banner-text p {
+  color: white;
+  font-size: 20px;
+  padding: 1em;
+}
+
+.social-links{
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  margin: auto;
+}
+
+.social-links i {
+  color:white;
+  font-size: 4em;
+  padding: 8px;
 }
