--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,6 @@
 /* contact page css */
  .contact-body{
   margin:auto;
-  background:grey;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -82,7 +81,6 @@
   height: 550px;
   background: white;
   color: black;
-  border: 2px solid red;
   margin-bottom: 20px;
 }
 
@@ -93,4 +91,15 @@
 .contact-grid p{
   font-family: 'Oxygen', sans-serif;
   font-weight: bold;
+}
+
+.contact-grid hr{
+  border-top: 5px dotted black;
+  width: 50%;
+  margin: auto;
+}
+
+.contact-list i{
+  font-size: 50px;
+  padding-right: 5rem; 
 }
