--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,15 @@
   padding: 8px;
 }
 
-/* contact page css */
+/* Resume Page Css */
+.resume-right-col{
+  background: #27221F;
+  color:white;
+}
+
+
+
+/* Contact Page Css */
  .contact-body{
   margin:auto;
   position: fixed;
